Fixed SlideBar clipping into text (CSS Overflow used)

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 
 
 .body {
-    overflow-y: hidden;
+    overflow: visible;
+    background-color:#29CFFF;
 }
 .carousel-item {
     height: 100vh;
